Fix spacing for account switcher menu item

--- a/src/views/_chat.scss
+++ b/src/views/_chat.scss
@@ -75,6 +75,14 @@ div[class*="sidebar"] > section[class*="panels"] > [class*="container"] > [class
     flex-direction: row;
 }
 
+[id*="status-picker-switch-account"][class*="item"] {
+    padding: 0 8px;
+}
+
+[id*="status-picker-switch-account"][class*="item"] div[class*="iconContainer"] {
+    margin-left: 0;
+}
+
 [class*="customEmojiPlaceholder"] {
     background-image: var(--ayu-edit-icon);
 }
